# backend/src/modules/teacher/dto/update-teacher.input.dto.ts
@@ -3,22 +3,6 @@ import { IsEnum, IsNotEmpty, IsOptional, IsString } from "class-validator";
 import { Timezone } from "./teacher.output.dto";
 
 export class UpdateTeacherDto {
-  @IsString()
-  @IsNotEmpty()
-	@ApiProperty({
-		description: "The login of the teacher",
-		example: "teacher123",
-	})
-  login: string;
-
-  @IsString()
-  @IsNotEmpty()
-	@ApiProperty({
-		description: "The password of the teacher",
-		example: "password123",
-	})
-  password: string;
-
 	@IsString()
 	@IsNotEmpty()
 	@ApiProperty({
@@ -26,14 +10,6 @@ export class UpdateTeacherDto {
 		example: "John Doe",
 	})
 	name: string;
-
-	@IsString()
-	@IsOptional()
-	@ApiProperty({
-		description: "The telegram id of the teacher",
-		example: "1234567890",
-	})
-	telegram_id: string | null;
 
 	@IsString()
 	@IsOptional()
